--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "react-yandex-maps": "^4.6.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23"
   }
 }
