--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-imask": "^6.4.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "react-yandex-maps": "^4.6.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23"
   }
 }
