--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "react-yandex-maps": "^4.6.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
